# audio-visualizer-pro

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  QUICKSTART.md  README.md  SESSION_NOTES.md  benchmark_gpu.py  gui.py  gui_streamlit_legacy.py  main.py  pyproject.toml  requirements.txt  start_gui.bat  start_gui.py  test_gpu_frame.py  test_gpu_render.py  test_gpu_render_lumina.py  test_gpu_render_pp.py  test_output.txt
cognitive_core/: agents.md  system_prompt.md  tool.md
config/: podcast_interview.json  podcast_mixed.json  podcast_news.json  podcast_story.json  schemas.py
memory/: temp.md
projects/: podcast.json
skills/: skill_filesystem_and_git.md  skill_gpu_development.md  skill_meta_evolution.md  skill_refactoring.md  skill_testing.md
src/: ai_matcher.py  analyzer.py  beat_sync.py  gemini_integration.py  gpu_preview.py  gpu_quote_renderer.py  gpu_renderer.py  gpu_text_renderer.py  local_transcription.py  pipeline.py  postprocess.py  quote_cache.py  quote_overlay.py  quote_refiner.py  types.py
src/gpu_visualizers/: __init__.py  base.py  bass_temple.py  chroma_field.py  frequency_flower.py  liquid_blobs.py  lumina_core.py  neon_oscilloscope.py  neon_wave_circle.py  orchestral_swell.py  particle_swarm.py  pulsing_core.py  sacred_mandala.py  spectrum_bars.py  spectrum_genesis.py  speech_focus.py  typographic.py  voice_flow.py
tests/: conftest.py  test_ai_matcher.py  test_analyzer.py  test_beat_sync.py  test_e2e.py  test_gemini_integration.py  test_gpu_preview.py  test_gpu_renderer.py  test_gpu_renderer_extended.py  test_gpu_text_renderer.py  test_postprocess.py  test_quote_overlay.py  test_quote_refiner.py  test_visuals.py
